--- a/thesis-implementation.cabal
+++ b/thesis-implementation.cabal
@@ -16,7 +16,7 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Syntax
+  exposed-modules:     Syntax, Eval, Programs, Tests
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.9 && <4.10,
